# tct-homepage

./: LICENSE  deploy_local.sh  homepage.cabal  stack.yaml  webif.php
css/: webif.css
src/: Main.hs  Tools.hs
src/Tools/: HoCA.hs  TRS.hs  Trs.hs
templates/: argument.html  content.html  default.html  php_session.php  strategy-list.html  strategy.html
