-- documentation, see http://haskell.org/cabal/users-guide/

name:                homepage
version:             0.1.0.0
synopsis:            Homepage of TcT
-- description:         
homepage:            http://cl-informatik.uibk.ac.at/software/tct
license:             BSD3
license-file:        LICENSE
author:              Martin Avanzini
maintainer:          martin.avanzini@uibk.ac.at
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable homepage
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9, hakyll, pandoc, tct-hoca, tct-core, directory, filepath
  hs-source-dirs:      src
  default-language:    Haskell2010