name:                homepage
version:             0.1.0.0
synopsis:            Homepage of TcT
-- description:         
homepage:            http://cl-informatik.uibk.ac.at/software/tct
license:             BSD3
license-file:        LICENSE
author:              Martin Avanzini
maintainer:          martin.avanzini@uibk.ac.at
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src        
  exposed-modules:     Tools.HoCA
                       Tools.TRS
                       Tools 
  build-depends:       base >=4.8 && <4.9
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , hakyll >= 4.7.4.0
                     , pandoc >= 1.15.1.1
                     , tct-core
                     , tct-hoca
                     , tct-trs
  default-language:    Haskell2010                     
  default-extensions:  TypeSynonymInstances,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       GADTs
executable homepage
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , hakyll
                     , hakyll >= 4.7.4.0
                     , homepage
                     , pandoc >= 1.15.1.1
                     , tct-core
                     , tct-hoca
                     , tct-trs
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  TypeSynonymInstances,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       GADTs,
                       TypeOperators,
                       DataKinds,
                       OverloadedStrings
                       